test/Sema/report-public-import-of-private-module.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t
// REQUIRES: VENDOR=apple
// REQUIRES: language_feature_InternalImportsByDefault

/// Prepare the SDK.
// RUN: cp -r %S/Inputs/public-private-sdk %t/sdk
// RUN: %target-language-frontend -emit-module -module-name PublicCodira \
// RUN:   %t/sdk/System/Library/Frameworks/PublicCodira.framework/Modules/PublicCodira.codemodule/source.code \
// RUN:   -o %t/sdk/System/Library/Frameworks/PublicCodira.framework/Modules/PublicCodira.codemodule/%target-languagemodule-name
// RUN: %target-language-frontend -emit-module -module-name PrivateCodira \
// RUN:   %t/sdk/System/Library/PrivateFrameworks/PrivateCodira.framework/Modules/PrivateCodira.codemodule/source.code \
// RUN:   -o %t/sdk/System/Library/PrivateFrameworks/PrivateCodira.framework/Modules/PrivateCodira.codemodule/%target-languagemodule-name

/// Expect errors when building a public client.
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level api -verify -module-name MainLib
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level=api -verify -module-name MainLib

/// Expect no errors when building an SPI client.
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level spi -module-name MainLib

/// The driver should also accept the flag and pass it along.
// RUN: %target-languagec_driver -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level spi -module-name MainLib

/// Expect no errors when building a client with some other library level.
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -module-name MainLib
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level other -module-name MainLib
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PublicImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level ipi -module-name MainLib
//--- PublicImports.code
import PublicCodira
import PrivateCodira // expected-error{{private module 'PrivateCodira' is imported publicly from the public module 'MainLib'}}{{1-1=internal }}

import PublicClang
import PublicClang_Private // expected-error{{private module 'PublicClang_Private' is imported publicly from the public module 'MainLib'}}{{1-1=internal }}
import FullyPrivateClang // expected-error{{private module 'FullyPrivateClang' is imported publicly from the public module 'MainLib'}}{{1-1=internal }}
import LocalClang // expected-error{{private module 'LocalClang' is imported publicly from the public module 'MainLib'}}{{1-1=internal }}
@_exported import MainLib // expected-warning{{private module 'MainLib' is imported publicly from the public module 'MainLib'}}

/// Expect no errors with implementation-only imports.
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/ImplOnlyImports.code \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ -module-cache-path %t \
// RUN:   -library-level api -D IMPL_ONLY_IMPORTS
//--- ImplOnlyImports.code

@_implementationOnly import PrivateCodira
@_implementationOnly import PublicClang_Private
@_implementationOnly import FullyPrivateClang
@_implementationOnly import LocalClang

/// Expect no errors with spi-only imports.
// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/SpiOnlyImports.code \
// RUN:   -experimental-spi-only-imports -module-cache-path %t \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -library-level api
//--- SPIOnlyImports.code

@_spiOnly import PrivateCodira
@_spiOnly import PublicClang_Private
@_spiOnly import FullyPrivateClang
@_spiOnly import LocalClang

/// Test error message on an unknown library level name.
// RUN: not %target-language-frontend -typecheck %t/Empty.code \
// RUN:   -library-level ThatsNotALibraryLevel 2>&1 \
// RUN:   | %FileCheck %s --check-prefix CHECK-ARG
// RUN: not %target-language-frontend -typecheck %t/Empty.code \
// RUN:   -library-level=ThatsNotALibraryLevel 2>&1 \
// RUN:   | %FileCheck %s --check-prefix CHECK-ARG
// CHECK-ARG: error: unknown library level 'ThatsNotALibraryLevel', expected one of 'api', 'spi', 'ipi', or 'other'
//--- Empty.code

/// Expect no errors in languageinterfaces.
// RUN: %target-language-typecheck-module-from-interface(%t/Client.private.codeinterface) \
// RUN: -sdk %t/sdk -module-cache-path %t -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -I %t -module-name Client

//--- Client.private.codeinterface
// language-interface-format-version: 1.0
// language-compiler-version: Codira version 5.8-dev effective-4.1.50
// language-module-flags: -language-version 4 -module-name Client -library-level api

import PublicCodira
import PrivateCodira
import PublicClang
import PublicClang_Private
import FullyPrivateClang
import LocalClang
@_exported import MainLib

// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/InternalImports.code \
// RUN:   -module-name MainLib -module-cache-path %t \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -library-level api -verify
//--- InternalImports.code
internal import PublicCodira
internal import PrivateCodira

internal import PublicClang
internal import PublicClang_Private
internal import FullyPrivateClang
internal import LocalClang

// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/FileprivateImports.code \
// RUN:   -module-name MainLib -module-cache-path %t \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -library-level api -verify
//--- FileprivateImports.code
fileprivate import PublicCodira
fileprivate import PrivateCodira

fileprivate import PublicClang
fileprivate import PublicClang_Private
fileprivate import FullyPrivateClang
fileprivate import LocalClang

// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/PrivateImports.code \
// RUN:   -module-name MainLib -module-cache-path %t \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -library-level api -verify
//--- PrivateImports.code
private import PublicCodira
private import PrivateCodira

private import PublicClang
private import PublicClang_Private
private import FullyPrivateClang
private import LocalClang

// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/ExplicitlyPublicImports.code \
// RUN:   -module-name MainLib -module-cache-path %t \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -library-level api -verify
//--- ExplicitlyPublicImports.code
public import PublicCodira
// expected-warning @-1 {{public import of 'PublicCodira' was not used in public declarations or inlinable code}}{{1-7=internal}}
public import PrivateCodira // expected-error{{private module 'PrivateCodira' is imported publicly from the public module 'MainLib'}}{{1-7=internal}}
// expected-warning @-1 {{public import of 'PrivateCodira' was not used in public declarations or inlinable code}}{{1-7=internal}}

public import PublicClang
// expected-warning @-1 {{public import of 'PublicClang' was not used in public declarations or inlinable code}}{{1-7=internal}}
public import PublicClang_Private // expected-error{{private module 'PublicClang_Private' is imported publicly from the public module 'MainLib'}}{{1-7=internal}}
// expected-warning @-1 {{public import of 'PublicClang_Private' was not used in public declarations or inlinable code}}{{1-7=internal}}
public import FullyPrivateClang // expected-error{{private module 'FullyPrivateClang' is imported publicly from the public module 'MainLib'}}{{1-7=internal}}
// expected-warning @-1 {{public import of 'FullyPrivateClang' was not used in public declarations or inlinable code}}{{1-7=internal}}
public import LocalClang // expected-error{{private module 'LocalClang' is imported publicly from the public module 'MainLib'}}{{1-7=internal}}
// expected-warning @-1 {{public import of 'LocalClang' was not used in public declarations or inlinable code}}{{1-7=internal}}
@_exported public import MainLib // expected-warning{{private module 'MainLib' is imported publicly from the public module 'MainLib'}}{{12-18=internal}}

// RUN: %target-language-frontend -typecheck -sdk %t/sdk %t/ImplictlyInternalImports.code \
// RUN:   -module-name MainLib -module-cache-path %t \
// RUN:   -F %t/sdk/System/Library/PrivateFrameworks/ \
// RUN:   -enable-upcoming-feature InternalImportsByDefault \
// RUN:   -library-level api -verify
//--- ImplictlyInternalImports.code
public import PublicCodira
// expected-warning @-1 {{public import of 'PublicCodira' was not used in public declarations or inlinable code}}{{1-8=}}
public import PrivateCodira // expected-error{{private module 'PrivateCodira' is imported publicly from the public module 'MainLib'}}{{1-8=}}
// expected-warning @-1 {{public import of 'PrivateCodira' was not used in public declarations or inlinable code}}{{1-8=}}
